<resources>
    <string name="sesl_action_bar_up_description">Navigate up</string>
    <string name="oui_apps">Apps</string>
    <string name="oui_camera">Camera</string>
    <string name="oui_close">Close</string>
    <string name="oui_done">Done</string>
    <string name="oui_hide_system_apps">Hide system apps</string>
    <string name="oui_info">Info</string>
    <string name="oui_location">Location</string>
    <string name="oui_microphone">Microphone</string>
    <string name="oui_no">No</string>
    <string name="oui_ok">OK</string>
    <string name="oui_permissions">Permissions</string>
    <string name="oui_permission_settings">Permission settings</string>
    <string name="oui_show_system_apps">Show system apps</string>
    <string name="oui_yes">Yes</string>
    <string name="oui_permission_help_title">About permissions</string>
    <string name="oui_permission_help_camera_description">Allows the app to take pictures and record videos.</string>
    <string name="oui_permission_help_location_description">Allows the app to access your phone\'s location.</string>
    <string name="oui_permission_help_microphone_description">Allows the app to record sounds.</string>
    <string name="oui_limitations_help_title">App limitations</string>
    <string name="oui_limitations_help_description">When any permission is in use, the app checks which app is running in foreground and logs it in the database.\n\nBut sometimes it may happen that System UI, Launcher or any other app is running over the main app, so mistakenly these apps will be logged in database instead of the real app which is using the permission.\n\nThis is a limitation for this app, as it\'s difficult to find which app is running in the background.</string>
    <string name="oui_permission_page_description">The following permissions are required for the app to work correctly.</string>
    <string name="oui_app_permission_location_title">Location access</string>
    <string name="oui_app_permission_location_summary">This permission is used to log location usage.</string>
    <string name="oui_app_permission_accessibility_title">Accessibility settings</string>
    <string name="oui_app_permission_accessibility_summary">This permission is used to log camera and microphone usages.</string>
    <string name="oui_permission_footer_button_text">Start</string>
    <string name="oui_permission_tipcard_title">Permissions not granted</string>
    <string name="oui_permission_tipcard_summary">One or both permissions needed by the app have not been granted.</string>
    <string name="oui_permission_tipcard_action">Allow</string>
    <string name="oui_permission_usage_history_category">Permissions used in last 24 hours</string>
    <string name="oui_permission_usage_history_view_all">All permissions</string>
    <string name="oui_permission_manager">Permission manager</string>
    <string name="oui_privacy_settings">Privacy settings</string>
    <string name="oui_app_settings">Settings</string>
    <string name="oui_settings_privacy_dots_title">Privacy chip</string>
    <string name="oui_settings_privacy_dots_subheader">Show an indicator when a permission is being used.</string>
    <string name="oui_settings_privacy_dots_color_title">Color</string>
    <string name="oui_settings_privacy_dots_position_title">Position</string>
    <string name="oui_settings_privacy_dots_position_tl">Top left</string>
    <string name="oui_settings_privacy_dots_position_tc">Top center</string>
    <string name="oui_settings_privacy_dots_position_tr">Top right</string>
    <string name="oui_settings_privacy_dots_position_lc">Center left</string>
    <string name="oui_settings_privacy_dots_position_rc">Center right</string>
    <string name="oui_settings_privacy_dots_position_bl">Bottom left</string>
    <string name="oui_settings_privacy_dots_position_bc">Bottom center</string>
    <string name="oui_settings_privacy_dots_position_br">Bottom right</string>
    <string name="oui_settings_privacy_dots_size_title">Size</string>
    <string name="oui_settings_privacy_dots_size_unit">%</string>
    <string name="oui_settings_privacy_dots_opacity_title">Opacity</string>
    <string name="oui_settings_privacy_dots_hide_title">Auto hide</string>
    <string name="oui_settings_privacy_dots_hide_timer_title">Hide time</string>
    <string name="oui_settings_privacy_dots_hide_timer_unit">sec</string>
    <string name="oui_settings_privacy_dots_minimize_title">Minimize to dot (beta)</string>
    <string name="oui_settings_privacy_dots_minimize_timer_title">Minimize time</string>
    <string name="oui_settings_privacy_dots_margin_title">Add bezel margins</string>
    <string name="oui_settings_privacy_dots_margin_summary">Add margins to the indicator so that it doesn\'t sticks to device bezels.</string>
    <string name="oui_settings_privacy_dots_click_title">Click action</string>
    <string name="oui_settings_privacy_dots_click_summary">Open the respective permission log page when clicking its indicator.</string>
    <string name="oui_settings_notification_title">Notification alert</string>
    <string name="oui_settings_notification_subheader">Receive a notification whenever a permission is being used.</string>
    <string name="oui_settings_notification_ongoing_title">Continuous notification</string>
    <string name="oui_settings_notification_ongoing_summary">The notification will disappear only after the permission usage is stopped.</string>
    <string name="oui_settings_notification_icon_title">Show app icon</string>
    <string name="oui_settings_notification_icon_summary">Display the app icon in the notification for the respective permission usage.</string>
    <string name="oui_settings_notification_click_title">Open app info on click</string>
    <string name="oui_settings_notification_click_summary">The notification will send you to the app info page instead of the permission log.</string>
    <string name="oui_settings_other_notifs_title">Notification settings</string>
    <string name="oui_settings_exclude_title">Exclude apps</string>
    <string name="oui_settings_exclude_summary">Choose which app to exclude from the permissions monitoring.</string>
    <string name="oui_settings_exclude_summary_enabled">%d apps</string>
    <string name="oui_settings_delete_logs_title">Delete all logs</string>
    <string name="oui_settings_delete_logs_summary">Clear all app usage logs for all permissions.</string>
    <string name="oui_settings_dark_mode_title">Dark mode</string>
    <string name="oui_settings_dark_mode_off">Off</string>
    <string name="oui_settings_dark_mode_on">On</string>
    <string name="oui_settings_dark_mode_system">Default</string>
    <string name="oui_aboutpage_details_button">Credits</string>
    <string name="oui_excluded_apps">Excluded apps</string>
    <string name="oui_excluded_apps_type">Exclude from</string>
    <string name="oui_settings_exclude_type_indicator">Indicator</string>
    <string name="oui_settings_exclude_type_notification">Notification</string>
    <string name="oui_settings_exclude_type_logs">Logs</string>
    <string name="oui_log_title">Usage history</string>
    <string name="oui_app_detail_no_items">No apps have used this permission</string>
    <string name="oui_permission_detail_no_items">No permission has been used</string>
    <string name="oui_permission_detail_see_more">View more</string>
    <string name="oui_details_delete_logs">Delete logs</string>
    <string name="oui_details_delete_logs_title">Delete %s logs</string>
    <string name="oui_details_delete_logs_text">Are you sure you want to delete all the %s permission logs?</string>
    <string name="oui_delete_all_logs_dialog_text">Are you sure you want delete all the permissions usage logs?</string>
    <string name="log_info">Timeline of when apps used your #ALIAS# permission</string>
    <string name="log_info_app">Timeline of when #ALIAS# used your permissions</string>
    <string name="log_empty">No app usage</string>
    <string name="log_button_manage">Manage permission</string>
    <string name="log_today">Today</string>
    <string name="log_yesterday">Yesterday</string>
    <string name="log_permission_start">Started</string>
    <string name="log_permission_stop">Stopped</string>
    <string name="log_permission_invalid">Unknown</string>
    <string name="permission_name">Location</string>
    <string name="permission_name2">Location usage</string>
    <string name="permission_info2">Today</string>
    <string name="permission_info3">2 mins</string>
    <string name="permission_time">13:07</string>
    <string name="permission_app">Telegram</string>
    <string name="app_name" translatable="false">Privacy Dashboard</string>
    <string name="app_name_colored" translatable="false">"<font color='#8bc34a'>Privacy Dashboard</font></string>
    <string name="app_package" translatable="false">rk.android.privacydashboard</string>
    <string name="image_descriptions" translatable="false"> </string>
    <string name="app_info">Made with &#10084; in India</string>
    <string name="profile_made_by" translatable="false">Made by Rushikesh Kamewar</string>
    <string name="profile_version">Version -</string>
    <string name="profile_github" translatable="false">GitHub</string>
    <string name="profile_donate">Donate</string>
    <string name="profile_contact">Contact</string>
    <string name="service_name">Privacy Dashboard Service</string>
    <string name="service_desc">This permission is required to show privacy indicators and to log camera, microphone and location usage.\n\nAll logs are stored locally on your device.</string>
    <string name="service_summary">Turn this on to enable privacy dashboard</string>
    <string name="notification_desc">Privacy Dashboard is running in the background</string>
    <string name="notification_hide">Click here to hide notification</string>
    <string name="notification_usage_title">Permission Usage Notification</string>
    <string name="notification_usage_desc">This notification will appear when camera, microphone and location permission is being used.</string>
    <string name="notification_app_unknown">Unknown app</string>
    <string name="notification_app_using">"Using "</string>
    <string name="notification_app_and">" and "</string>
    <string name="notification_app_permission">" permission"</string>
    <string name="notification_app_permissions">" permissions"</string>
    <string name="app_release_title" translatable="false">What\'s new in v1.6</string>
    <string name="app_release" translatable="false">1. App is now open source. Click on button below or in app settings to checkout app on github &#10084;\n\n
                                2. Added indicator customizations: color, auto hide\n\n
                                3. Added notification customization: click action option\n\n
                                4. Added system apps to excluded app selection list</string>
    <string name="app_release_button">Done</string>
    <string name="start_title">AutoStart permission</string>
    <string name="start_permission_info">Your device will terminate the background app service. App will need AutoStart permission to work properly.</string>
    <string name="start_setup">Setup</string>
    <string name="menu_theme">Theme</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_whats_new">What\'s new</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_exclude" translatable="false">Exclude</string>
    <string name="menu_include" translatable="false">Include</string>
    <string name="menu_refresh_info">Logs Updated</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_location">Location</string>
    <string name="permission_microphone">Microphone</string>
    <string name="settings_limitation">App limitations</string>
    <string name="settings_release">Changelog</string>
</resources>