<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_exclude"
        android:title="@string/menu_exclude"
        android:icon="@drawable/ic_samsung_file_type_excel"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_delete"
        android:icon="@drawable/oui_app_picker_ic_setting"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/settings_limitation"
        android:icon="@drawable/ic_samsung_help_2"
        android:visible="false"
        app:showAsAction="ifRoom"/>

</menu>